# aletheia

./: .gitignore  download.py  pyproject.toml  search.py
database/: db.py  docker-compose.yaml  init.sql  scrapping.py
database/models/: models.py
migrations/: env.py
migrations/versions/: 400b790cde90_primeira_revision.py  6c3b872e2314_primeira_revisão.py
models/: models.py
tests/: conftest.py
tests/test_database/: test_repository.py  test_scrapping.py
